--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-{% seo %}
+    {% seo %}
+    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     {% include mathjax-v3.html %}
   </head>
@@ -17,11 +18,11 @@
 
       {{ content }}
 
-      {% if site.github.private != true and site.github.license %}
+      <!-- {% if site.github.private != true and site.github.license %}
       <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
         This site is open source. {% github_edit_link "Improve this page" %}.
       </div>
-      {% endif %}
+      {% endif %} -->
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
     <script>anchors.add();</script>
@@ -35,5 +36,17 @@
       ga('send', 'pageview');
     </script>
     {% endif %}
+
+    <!-- copyright -->
+    <footer>
+      &copy; 2020 - 2025. 
+      
+      &emsp;&emsp;
+      Made with 🧡 by Xin Chen
+      
+      &emsp;&emsp;
+      Licensed under a <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+    </footer>
+  
   </body>
 </html>
