--- a/_layouts/main.css
+++ b/_layouts/main.css
@@ -28,8 +28,8 @@ img[alt=drawing] {
 
 footer{
 	text-align: center;
-	margin:0.5em 0 0 0;
-	border-top:5px double #ccc;
+	margin:0.5em 0.5em 0 0;
+	/* border-top:5px double #ccc; */
 	padding: 0.5em 0 0 0;
 	font-size:80%;
 	color:#999;
