--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <!-- 网页显示图标-->
+	  <link rel="icon" href="../img/icon(256x256).ico" type="image/x-icon">
+  	<!-- 收藏夹显示图标-->
+	  <link rel="shortcut icon" href="../img/icon(256x256).ico" type="image/x-icon">
     {% seo %}
-    <link rel="stylesheet" href="main.css">
+    <!-- <link rel="stylesheet" href="main.css"> -->
     <link rel="stylesheet" href="../main.css">
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     {% include mathjax-v3.html %}
