--- a/main.css
+++ b/main.css
@@ -23,13 +23,13 @@ a {
 
 img[alt=drawing] { 
     width: 100%;
-    max-width: 500px; }
+    max-width: 400px; }
 
 
 footer{
 	text-align: center;
 	margin:0.5em 0 0 0;
-	border-top:5px double #ccc;
+	/* border-top:5px double #ccc; */
 	padding: 0.5em 0 0 0;
 	font-size:80%;
 	color:#999;
