--- a/main.css
+++ b/main.css
@@ -28,7 +28,7 @@ img[alt=drawing] {
 
 footer{
 	text-align: center;
-	margin:0.5em 0 0 0;
+	margin:0.5em 0.5em 0 0;
 	/* border-top:5px double #ccc; */
 	padding: 0.5em 0 0 0;
 	font-size:80%;
