--- a/main.css
+++ b/main.css
@@ -28,9 +28,10 @@ img[alt=drawing] {
 
 footer{
 	text-align: center;
-	margin:0.5em 0.5em 0 0;
+	bottom: 5px;
+	/* margin:0.5em 0.5em 0 0; */
 	/* border-top:5px double #ccc; */
-	padding: 0.5em 0 0 0;
+	/* padding: 0.5em 0 0 0; */
 	font-size:80%;
 	color:#999;
 }
