--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
   	<!-- 收藏夹显示图标-->
 	  <link rel="shortcut icon" href="../img/icon(256x256).ico" type="image/x-icon">
     {% seo %}
-    <!-- <link rel="stylesheet" href="main.css"> -->
+    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="../main.css">
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     {% include mathjax-v3.html %}
@@ -43,7 +43,7 @@
 
     <!-- copyright -->
     <footer>
-      &copy; 2020 - 2025. 
+      &copy; 2020 -- 2025. 
       
       &emsp;&emsp;
       Made with 🧡 by Xin Chen
